refactor: consolidate attendee invite management into AttendeeController
- Merged attendee invite functionality from AttendeeInviteController into AttendeeController, streamlining the API structure for managing attendee invites.
- Introduced a new endpoint for updating attendee invite RSVP status, allowing updates via inviteId or token.
- Enhanced BulkAttendeeCreateRequest to support optional notification preferences for event owners when adding attendees.
- Removed deprecated DTOs and cleaned up related service methods to improve code clarity and maintainability.
- Updated test scripts to reflect changes in attendee invite management and ensure comprehensive coverage of new features.